--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,19 @@
 
 html {
   background-color: #2c2c2c;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   padding: 0;
+}
+
+.link {
+  background-color: transparent;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.link:hover {
+  background-color: #547654;
 }
