--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+@import url('/icons/check.css');
+@import url('/icons/copy.css');
 
 * {
   color: #ffffffde;
@@ -10,18 +12,18 @@
 }
 
 html {
-  background-color: #2c2c2c;
   scroll-behavior: smooth;
 }
 
 body {
+  background-color: #1b1b1f;
   margin: 0;
   padding: 0;
 }
 
 .link {
   background-color: transparent;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .link:hover {
